<resources>
    <string name="app_name">Los Pollos Hermanos</string>
    <string name="submit_button">Submit Order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_menu">Our Menu</string>
    <string name="item_price">Price: %.02f$</string>
    <string name="add_item">Add to cart</string>
    <string name="extra_cheese">Extra Cheese: %.02f$</string>
    <string name="extra_sauce">Extra Hot Sauce: %.02f$</string>
    <string name="jalapeno"> Add Jalapeno: %.02f$</string>
    <string name="drink"> Add mystery drink: %.02f$</string>
    <string name="remove_onion">No onions in the dish</string>
    <string name="add_to_order">Add to order</string>
    <string name="cancel">Cancel</string>
    <string name="extras_label">Add extras</string>
    <string name="order_label">Order details</string>
    <string name="customer_label">Customer information</string>
    <string name="additional_cheese">Additional cheese</string>
    <string name="additional_sauce">Additional hot sauce</string>
    <string name="additional_jalapeno">Add Jalapeno</string>
    <string name="add_drink">Add a mystery drink</string>
    <string name="onion"> No onions</string>
    <string name="total_price">Total: %s</string>
    <string name="customer_details">Customer Information</string>
    <string name="name_hint">Input your name</string>
    <string name="address_hint">Input your address</string>
    <string name="next">Next</string>
    <string name="customer_info_label">Delivery details</string>
    <string name="pickup_options">Pickup options</string>
    <string name="summary_label">Order Summary</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address </string>
    <string name="order"> Order </string>
    <string name="extras"> Extras </string>
    <string name="pickup_date">Pickup date</string>
    <string name="send_order">Send order to Whatsapp</string>
    <string name="wpp_header">New Order</string>
    <string name="order_details">Customer First name: %1$s \nMain dish: %2$s \nExtras: %3$s \nPickup date: %4$s \nTotal: %5$s \n\nThank you!</string>
</resources>