<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserInfoFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.lospolloshermanos.model.OrderViewModel" />

        <variable
            name="completeOrderFragment"
            type="com.example.lospolloshermanos.CompleteOrder" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/userinfo_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/customer_details" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userinfo_label"
                android:layout_marginTop="32dp"
                android:hint="@string/name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_address"
                style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                android:layout_marginTop="32dp"
                android:hint="@string/address_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_input_edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/pickup_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.LosPollos.TextView.OrderSummary"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintStart_toStartOf="@+id/user_address"
                app:layout_constraintTop_toBottomOf="@+id/user_address"
                android:text="@string/pickup_options"/>

            <RadioGroup
                android:id="@+id/date_options"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/user_address"
                app:layout_constraintTop_toBottomOf="@+id/pickup_label"
                android:checkedButton="@id/option0">

                <RadioButton
                    android:id="@+id/option0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.date.equals(viewModel.dateOptions[0])}"
                    android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[0])}"
                    android:text="@{viewModel.dateOptions[0]}"
                    tools:text="Thursday" />

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_elements"
                    android:checked="@{viewModel.date.equals(viewModel.dateOptions[1])}"
                    android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[1])}"
                    android:text="@{viewModel.dateOptions[1]}"
                    tools:text="Friday" />
            </RadioGroup>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/date_options"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{() -> completeOrderFragment.goToNextScreen()}"
                android:text="@string/next" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintTop_toBottomOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{() -> completeOrderFragment.cancelOrder()}"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>